[kie-issues-333] Fix CVE by removing Batik dependency (#3049)
* Commons IO depency not touched for the current usage

* Fixes CVE https://github.com/kiegroup/kie-issues/issues/333 - Removing Batik dependency

* SonarQube feedback adjusts.